fix (contact-style.css)
- fixed scrollbar appearing while not usable

--- a/contact-style.css
+++ b/contact-style.css
@@ -15,7 +15,9 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-y: hidden;
     overflow-x: hidden;
+    position: relative;
 }
 
 h2 {
@@ -48,12 +50,6 @@ p a:hover {
 
 html, body {
     height: 100%;
-}
-
-body {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    position: relative;
 }
 
 header {
